# 08-meteorology-fluid-dynamics

./: CMakeLists.txt  README.md  setup.py
include/: fluid_solver.h  grid3d.h  netcdf_reader.h
python/: demo_data_access.py  pipeline.py  test_nan_robustness.py  volcano_eruption_simulation.py
src/: fluid_solver.cpp  grid3d.cpp  netcdf_reader.cpp  pybind11_bindings.cpp
tests/: CMakeLists.txt  test_grid.cpp  test_solver.cpp
volcano_simulation_output/: aerosol_frame_0000_20250601_000030.h5  aerosol_frame_0001_20250601_001500.h5  aerosol_frame_0001_20250601_010000.h5  aerosol_frame_0001_20250601_020000.h5  aerosol_frame_0002_20250601_003000.h5  aerosol_frame_0002_20250601_020000.h5  aerosol_frame_0002_20250601_040000.h5  aerosol_frame_0003_20250601_004500.h5  aerosol_frame_0003_20250601_030000.h5  aerosol_frame_0003_20250601_060000.h5  aerosol_frame_0004_20250601_010000.h5  aerosol_frame_0004_20250601_040000.h5  aerosol_frame_0004_20250601_080000.h5  aerosol_frame_0005_20250601_050000.h5  aerosol_frame_0005_20250601_100000.h5  aerosol_frame_0006_20250601_060000.h5  aerosol_frame_0006_20250601_120000.h5  aerosol_frame_0007_20250601_140000.h5  aerosol_frame_0008_20250601_160000.h5  aerosol_frame_0009_20250601_180000.h5  aerosol_frame_0010_20250601_200000.h5  aerosol_frame_0011_20250601_220000.h5  aerosol_frame_0012_20250602_000000.h5
